# wheelctl-rs

./: Cargo.toml  Justfile  LICENSE-APACHE  LICENSE-MIT  README.md
packaging/dunst/: wheelctl-bottom-right.conf
packaging/systemd/user/: wheelctl.service
src/: backend.rs  cli.rs  config.rs  daemon.rs  device.rs  main.rs  osd.rs
