[package]
name = "wheelctl"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.50", features = ["derive"] }
dirs = "6.0.0"
evdev = "0.13.2"
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.8"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
